Enhance documentation across multiple modules with detailed explanations, performance metrics, JVM tuning options, and best practices for memory management and garbage collection.